--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <center> <h1> Hello World!!! </h1> </center>
+    <script src = "/socket.io/socket.io.js"> </script>
+    <script src = "/javascripts/socket_communication.js"> </script>
 </body>
 </html>
