--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,57 @@
     <center> <h1> Hello World!!! </h1> </center>
     <script src = "/socket.io/socket.io.js"> </script>
     <script src = "/javascripts/socket_communication.js"> </script>
+
+    <button id="btnGiveCommand"> Give Command </button>
+    <br><br>
+    <span id="message"></span>
+    <br><br>
+    <input id="chkVijay" type="checkbox"> Vijay Katkar
+    <br>
+    <input id="chkPoonam" type="checkbox"> Poonam Katkar
+    <br>
+    <input id="chkPayal" type="checkbox"> Payal Katkar
+    <br>
+
+    <script>
+        let message = document.querySelector("#message");
+        let SpeechRecognition = webkitSpeechRecognition;
+        let SpeechGrammarList = webkitSpeechGrammarList;
+
+        let grammar = "#JSGF V1.0;";
+        let recognition = new SpeechRecognition();
+        let grammarList = new SpeechGrammarList();
+        grammarList.addFromString(grammar, 1);
+
+        recognition.grammars = grammarList;
+        recognition.lang = "en-US";
+        recognition.interimResults = false;
+
+        recognition.onresult =  function (event) {
+            let last = event.results.length - 1;
+            let command = event.results[last][0].transcript;
+            message.textContent = "Voice Command : " + command +  ".";
+
+            if(command.toLocaleLowerCase() == "select vijay"){
+                document.querySelector("#chkVijay").checked = true;
+            } else if(command.toLocaleLowerCase() == "select poonam"){
+                document.querySelector("#chkPoonam").checked = true;
+            } else if(command.toLocaleLowerCase() == "select payal"){
+                document.querySelector("#chkPayal").checked = true;
+            }
+        }
+
+        recognition.onspeechend = function () {
+            recognition.stop();
+        }
+
+        recognition.onerror = function (event) {
+            message.textContent = "Error : " + event.error;
+        }
+
+        document.querySelector("#btnGiveCommand").addEventListener("click", function () {
+            recognition.start();
+        });
+    </script>
 </body>
 </html>
