--- a/public/VoiceBasedIDE_1.html
+++ b/public/VoiceBasedIDE_1.html
@@ -37,6 +37,7 @@
             <div class="col-lg-6">
                 <form action = "/RunPython3" method="POST">
                     <button type="submit">Run</button>  <br>
+                    Line No : <input type="number" id="line_no">
 <textarea id="code_area" name="code_area">
 
 </textarea>
